<resources>
    <string name="app_name">BikeBattle</string>
    <string name="title_text">The hardest battle u will get!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tracking_test">TrackingTestActivity</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">Login</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">1005553311508-r90po1hf888rkr2u464ccoo8vvojk75u.apps.googleusercontent.com</string>
    <string name="google_api_key">AIzaSyD9-iXLN4t282Q2EW22NCVTUTev4okhZYE</string>
    <string name="action_googlemap" translatable="false">Google Map</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="length">Length</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NameSearch">Name</string>
    <string name="SearchButton">Search</string>
    <string name="friendSearchHint">Type the name of your friend…</string>
    <string name="searchTextHint">Name</string>
    <string name="DefaultUserName">Hans Wurst</string>
    <string name="helpAddFriend">Use the search to find your friends.</string>
    <string name="helpFriends">Forever alone :( \n\n Try to find your friends.</string>
    <string name="showTracks">You a are a lazy guy, make some tracks</string>
    <string name="helpTextRoutes">No routes saved ;(</string>
    <string name="Menu_New_Track">New track</string>
    <string name="Menu_Own_Routes">Own Routes</string>
    <string name="Menu_Own_tracks">Own Tracks</string>
    <string name="Menu_Find_Routes">Find routes</string>
    <string name="Menu_Profil">Profil</string>
    <string name="Menu_Your_Friends">Your Friends</string>
    <string name="Menu_Logout">Logout</string>
</resources>
