<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/track_and_routes"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_new_track"
                android:icon="@drawable/ic_menu_route"
                android:title="@string/Menu_New_Track"/>
        <item
                android:id="@+id/nav_routes"
                android:icon="@drawable/ic_menu_tracksy"
                android:title="@string/Menu_Own_Routes"/>
        <item
                android:id="@+id/nav_tracks"
                android:icon="@drawable/ic_menu_tracksy"
                android:title="@string/Menu_Own_tracks"/>
        <item
                android:id="@+id/nav_find_routes"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/Menu_Find_Routes"/>
    </group>

    <group android:id="@+id/profile"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_menu_profil"
                android:title="@string/Menu_Profil"/>
        <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_friends"
                android:title="@string/Menu_Your_Friends"/>

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/Menu_Logout"/>
    </group>

</menu>
